unpackaged/main/default/objects/blng__LegalEntity__c/blng__LegalEntity__c.object-meta.xml
<CustomObject>
    <label>Legal Entity</label>
    <nameField>
        <label>Legal Entity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Legal Entities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>