unpackaged/main/default/objects/blng__LegalEntity__c/fields/blng__City__c.field-meta.xml
<CustomField>
    <fullName>blng__City__c</fullName>
    <inlineHelpText>Nom de la ville</inlineHelpText>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>