unpackaged/main/default/objects/blng__LegalEntity__c/fields/blng__Country__c.field-meta.xml
<CustomField>
    <fullName>blng__Country__c</fullName>
    <inlineHelpText>Nom du pays</inlineHelpText>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>