unpackaged/main/default/objects/blng__LegalEntity__c/fields/blng__County__c.field-meta.xml
<CustomField>
    <fullName>blng__County__c</fullName>
    <inlineHelpText>Nom de la région</inlineHelpText>
    <label>County</label>
    <length>255</length>
    <type>Text</type>
</CustomField>