unpackaged/main/default/objects/blng__LegalEntity__c/fields/blng__Street2__c.field-meta.xml
<CustomField>
    <fullName>blng__Street2__c</fullName>
    <inlineHelpText>Rue, suite.</inlineHelpText>
    <label>Street 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>