unpackaged/main/default/objects/blng__LegalEntity__c/fields/blng__ZipPostalCode__c.field-meta.xml
<CustomField>
    <fullName>blng__ZipPostalCode__c</fullName>
    <inlineHelpText>Code postal</inlineHelpText>
    <label>Zip / Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>