unpackaged/main/default/objects/blng__LegalEntity__c/fields/N_TVA_Intracom__c.field-meta.xml
<CustomField>
    <fullName>N_TVA_Intracom__c</fullName>
    <label>N° TVA / Intracom</label>
    <length>100</length>
    <type>Text</type>
</CustomField>