unpackaged/main/default/objects/blng__LegalEntity__c/fields/Numero_RCS__c.field-meta.xml
<CustomField>
    <fullName>Numero_RCS__c</fullName>
    <label>Numéro RCS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>