unpackaged/main/default/objects/blng__LegalEntity__c/fields/Update_Rate_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Update_Rate_Frequency__c</fullName>
    <label>Fréquence d&#39;actualisation du taux</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mensuelle</fullName>
            </value>
            <value>
                <fullName>Trimestrielle</fullName>
            </value>
            <value>
                <fullName>Annuelle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>